@@ -22,6 +22,8 @@ v6.3.0-git
 v6.2.2
 ------
 
+[mms] Ensure that search/POP3 mailbox listings are saved even if there is an
+      issue with the underlying cache backend.
 [mms] Fix replying to non-UTF-8 messages when the 'reply_charset' preference
       is true.
 [jan] Fix vCard MIME viewer.
